# Customer-Sales-Prediction-ML-System-Architecture-

./: .gitignore  README.md  customer sales.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data.yml  model.yml  training.yml
docker/: Dockerfile
pipelines/: train_pipeline.py
scripts/: batch_predict.py  serve.py  train.py
src/data/: preprocessing.py  validation.py
src/features/: build_features.py
src/serving/: api.py  schemas.py
tests/: conftest.py  test_data.py  test_features.py  test_model.py  test_serving.py
