[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-sales-prediction-system"
version = "0.1.0"
description = "Customer sales prediction ML system"
requires-python = ">=3.10"
dependencies = [
  "blinker==1.9.0",
  "click==8.3.1",
  "colorama==0.4.6",
  "exceptiongroup==1.3.1",
  "Flask==3.1.1",
  "gunicorn==23.0.0",
  "iniconfig==2.3.0",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.6",
  "joblib==1.5.1",
  "MarkupSafe==3.0.3",
  "numpy==2.2.6",
  "packaging==26.0",
  "pandas==2.2.3",
  "pluggy==1.6.0",
  "Pygments==2.19.2",
  "pytest==9.0.2",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "PyYAML==6.0.3",
  "scikit-learn==1.6.1",
  "scipy==1.15.3",
  "six==1.17.0",
  "threadpoolctl==3.6.0",
  "tomli==2.4.0",
  "typing_extensions==4.15.0",
  "tzdata==2025.3",
  "Werkzeug==3.1.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pipelines*"]
